# Gradia

./: README.md  gradia.po  meson.build  pyproject.toml  requirements.txt
.github/workflows/: build.yml
build-aux/flatpak/: be.alexandervanhee.gradia.Devel.json  be.alexandervanhee.gradia.Plugin.ocr.json  be.alexandervanhee.gradia.json  be.alexandervanhee.gradia.ocr.json  be.alexandervanhee.gradia.ocr.metainfo.xml  pypi-dependencies.json
build-aux/snap/: snapcraft.yaml
data/: be.alexandervanhee.gradia.gschema.xml  be.alexandervanhee.gradia.metainfo.xml.in.in  gradia.gresource.xml.in  help.txt  meson.build  models.json  resources.data.gresource.xml.in  style-hc.css  style.css
data/source-styles/: rose-pine-dawn.xml  rose-pine-moon.xml  rose-pine.xml
data/ui/: background_selector.blp  confirm_close_dialog.blp  drawing_tools_group.blp  gradient_step_dialog.blp  image_generator_window.blp  image_sidebar.blp  image_stack.blp  main_window.blp  meson.build  ocr_dialog.blp  ocr_page.blp  preferences_window.blp  recent_picker.blp  settings_window.blp  shortcuts_dialog.blp  text_entry_popover.blp  welcome_page.blp
data/ui/preferences/: ocr_model_page.blp  screenshot_guide_page.blp
data/ui/selectors/: gradient_selector.blp  image_selector.blp
gradia/: app_constants.py  clipboard.py  gradia.in  main.py  meson.build  screenshot_dimension_window.py
po/: LINGUAS  POTFILES.in  fr.po  gradia.pot  hu.po  it.po  kk.po  nl.po  pl.po  pt_BR.po  sk.po  sv.po  te.po  vi.po
scripts/: generate_tessdata_json.py
src/: main.py
web/: README.md  index.html  providers.html
(+55 files in other folders)
